@@ -178,9 +178,9 @@ public class ScheduleService {
             PipelineConfig pipelineConfig = goConfigService.pipelineConfigNamed(pipelineName);
 
             if (canSchedule(pipelineConfig)) {
-                final Pipeline pipelineInstance = pipelineScheduleQueue.createPipeline(buildCause, pipelineConfig, schedulingContext(buildCause.getApprover(), pipelineConfig, pipelineConfig.first()),
+                final Pipeline pipelineInstance = pipelineScheduleQueue.createPipeline(buildCause, pipelineConfig, schedulingContext(buildCause.getApprover(), pipelineConfig, pipelineConfig.getFirstOrNull()),
                         goConfigService.getCurrentConfig().getMd5(), timeProvider);
-                serverHealthService.update(stageSchedulingSuccessfulState(pipelineName.toString(), CaseInsensitiveString.str(pipelineConfig.get(0).name())));
+                serverHealthService.update(stageSchedulingSuccessfulState(pipelineName.toString(), CaseInsensitiveString.str(pipelineConfig.getFirst().name())));
                 return pipelineInstance;
             }
         } catch (RecordNotFoundException e) {
